--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.19.2",
     "mysql2": "^3.11.3",
@@ -17,5 +16,6 @@
     "sequelize": "^6.37.3",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
-  }
+  },
+  "description": ""
 }
